Fix burger menu, add func close on touch off-screen, fix shop with cards

--- a/src/index.scss
+++ b/src/index.scss
@@ -88,7 +88,7 @@
 	z-index: 999;
 	display: flex;
 	flex-direction: column;
-	width: 40%;
+	width: 50%;
 	height: 100%;
 	font-size: 18px;
 	text-align: center;
@@ -165,6 +165,7 @@
 		flex-direction: row;
 		align-items: center;
 		justify-content: space-between;
+		margin-top: 67px;
 	}
 
 	&__button {
@@ -172,7 +173,6 @@
 		flex-direction: row;
 		align-items: center;
 		justify-content: space-evenly;
-		margin-top: 67px;
 		border-radius: 6px;
 		width: 32%;
 		height: 39px;
@@ -183,7 +183,6 @@
 
 		&__inBasket {
 			align-items: flex-end;
-			margin-top: 67px;
 			font-weight: 700;
 			font-size: 20px;
 			white-space: nowrap;
@@ -211,7 +210,7 @@
 	}
 
 	&__dotted {
-		margin-left: -11%;
+		margin-left: -10%;
 		border-radius: 50%;
 		width: 40px;
 		height: 40px;
@@ -345,6 +344,8 @@
 	}
 
 	.carousel {
+		padding-top: 2px;
+
 		&__grid {
 			padding-right: 20px;
 			padding-left: 20px;
@@ -378,18 +379,21 @@
 	}
 
 	.cards {
+		margin-bottom: 40px;
+
+		&__box {
+			margin-top: 32px;
+			font-size: clamp(1rem, 0.77rem + 1vw, 1.25rem);
+		}
+
+		&__down {
+			margin-top: 36px;
+		}
+
 		&__grid {
 			display: grid;
 			grid-template-columns: repeat(2, minmax(0, 1fr));
 			gap: 10px;
-		}
-
-		&__description {
-			font-size: 16px;
-		}
-
-		&__place {
-			font-size: 16px;
 		}
 	}
 
